--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     <nav class="navbar">
         <a href="#" class="navbar-logo">
-            <img src="images/ThreadLock Logo Design.jpg" alt="ThreadLock Logo">
+            <img src="main/ThreadLock Logo Design.jpg" alt="ThreadLock Logo">
         </a>
         <div class="navbar-links">
             <a href="#solution">Features</a>
@@ -292,7 +292,7 @@
                     [cite_start]<p>While legal professionals are adopting AI to manage their cases, individuals are often left behind[cite: 16]. ThreadLock bridges that gap.</p>
                 </div>
                 <div class="problem-image">
-                    <img src="images/slide-2.png" alt="Family Law Case Breakdown Chart">
+                    <img src="main/slide-2.png" alt="Family Law Case Breakdown Chart">
                 </div>
             </div>
         </div>
