--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
         /* --- Hero Section --- */
         .hero {
-            background-image: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('slide-1.jpg'); /* CORRECTED PATH */
+            background-image: linear-gradient(rgba(44, 62, 80, 0.8), rgba(44, 62, 80, 0.8)), url('slide-1.jpg'); /* UPDATED PATH */
             background-size: cover;
             background-position: center;
             color: var(--white);
@@ -261,4 +261,119 @@
 </head>
 <body>
 
-    <nav class="
+    <nav class="navbar">
+        <a href="#" class="navbar-logo">
+            <img src="threadlock-logo.jpg" alt="ThreadLock Logo">
+        </a>
+        <div class="navbar-links">
+            <a href="#solution">Features</a>
+            <a href="#professionals">For Professionals</a>
+            <a href="#employers">Employer Benefits</a>
+            <a href="#offer">Pricing</a>
+            <a href="#">Log In</a>
+        </div>
+    </nav>
+
+    <header class="hero" id="top">
+        <div class="container">
+            <h1>Take Control of Your Family Law Case.</h1>
+            <p>Empower your case with secure, structured evidence and AI guidance. ThreadLock is the AI-guided, court-ready journaling app that helps you build a clear, chronological, and tamper-proof record of events.</p>
+            <ul class="hero-features">
+                <li>✓ Smart AI prompts ensure you capture critical details for your jurisdiction.</li>
+                <li>✓ Blockchain-secured entries create immutable, timestamped evidence.</li>
+                <li>✓ Export court-ready summaries for your attorney, mediator, or the court in minutes.</li>
+            </ul>
+            <a href="#offer" class="btn">Get Started Now - First 6 Months for $5</a>
+        </div>
+    </header>
+
+    <section id="problem">
+        <div class="container">
+            <h2>Navigating Family Law is Complex and Overwhelming.</h2>
+            <div class="problem-content">
+                <div class="problem-text">
+                    [cite_start]<p>Courts are burdened with over 3.8 million family law cases annually. [cite: 3, 12] [cite_start]If you're handling this alone, you're not alone—<strong>72% of cases involve at least one self-represented person</strong>. [cite: 4, 13] [cite_start]Trying to document every text, email, and event leads to disorganized, inconsistent records that can weaken your case. [cite: 5, 15]</p>
+                    [cite_start]<p>While legal professionals are adopting AI, individuals are often left behind. [cite: 5, 16] [cite_start]ThreadLock bridges that gap. [cite: 6]</p>
+                </div>
+                <div class="problem-image">
+                    <img src="slide-2.png" alt="Family Law Case Breakdown Chart">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="solution">
+        <div class="container">
+            <h2>Reimagining Evidence in Three Simple Steps</h2>
+            [cite_start]<p>Our vision is to revolutionize custody evidence with AI-guided, immutable, court-ready journaling. [cite: 6]</p>
+            <div class="solution-steps">
+                <div class="step">
+                    <h3>Log Everything with AI Guidance</h3>
+                    [cite_start]<p>Capture critical details with structured forms. [cite: 20] [cite_start]Record and automatically transcribe audio. [cite: 21] [cite_start]Our AI provides feedback, prompting you for objective facts and relevant details for your jurisdiction. [cite: 22, 23]</p>
+                </div>
+                <div class="step">
+                    <h3>Lock It with Unbreakable Security</h3>
+                    [cite_start]<p>Each entry is secured with immutable timestamps and encryption via blockchain technology. [cite: 25] [cite_start]This builds trust and prevents any claims of tampering, a critical advantage in legal disputes. [cite: 25, 166]</p>
+                </div>
+                <div class="step">
+                    <h3>Export Court-Ready Documents</h3>
+                    [cite_start]<p>Instantly generate clean, professional PDF or data exports of your evidence. [cite: 33] [cite_start]Auto-generate summaries, highlight issues, and add case numbers for court compliance. [cite: 32, 35]</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="offer">
+        <div class="container">
+            <h2>Join Our Early Adopter Program. Get Clarity for Just $5.</h2>
+            <div class="offer-box">
+                <p>For a limited time, get full access to the <strong>ThreadLock Pro Tier</strong> for just <strong>$5.00 for your first 6 months.</strong></p>
+                <p>Your early support helps us build the best tool possible. In return, you get our powerful evidence management platform at an unprecedented price. Lock in your rate, build your case, and help us revolutionize family law.</p>
+                <a href="#" class="btn">Claim My $5 Offer</a>
+                [cite_start]<p class="offer-note">After the 6-month promotional period, your account will convert to our standard Pro Tier subscription ($19.99/month). [cite: 56, 59] You can cancel at any time.</p>
+            </div>
+        </section>
+
+    <section id="professionals" class="b2b-section">
+        <div class="container">
+            <h2>Streamline Your Practice. Empower Your Clients.</h2>
+            <p>ThreadLock isn't just for individuals. [cite_start]Our <strong>Attorney Dashboard</strong> is built to streamline client evidence collection and case management. [cite: 41, 57]</p>
+            <ul style="list-style-type: none; padding: 0; max-width: 600px; margin: 30px auto; text-align: left;">
+                [cite_start]<li><strong>✓ Multi-Case Dashboard:</strong> Manage all your clients in one secure, organized place. [cite: 30, 57]</li>
+                [cite_start]<li><strong>✓ Seamless Evidence Intake:</strong> Invite clients to use ThreadLock to receive their structured, timestamped, and pre-summarized evidence directly. [cite: 41]</li>
+                [cite_start]<li><strong>✓ Objective Records:</strong> Provide a tool for your clients that encourages objective, factual reporting, improving the quality of evidence you receive. [cite: 23]</li>
+            </ul>
+            <a href="#" class="btn btn-dark">Learn About the Attorney Dashboard</a>
+        </div>
+    </section>
+
+    <section id="employers">
+        <div class="container">
+            <h2>Support Your Team Through Life's Toughest Challenges</h2>
+            <p>Family law disputes are a significant source of stress, impacting employee well-being, focus, and productivity. Offer ThreadLock as a modern, high-value benefit to support your team when they need it most.</p>
+            <ul style="list-style-type: none; padding: 0; max-width: 600px; margin: 30px auto; text-align: left;">
+                <li><strong>✓ Reduce Employee Stress:</strong> Provide a tangible tool that helps employees regain a sense of control during difficult personal circumstances.</li>
+                <li><strong>✓ Increase Productivity:</strong> Help reduce the time and mental energy employees spend organizing documents and worrying about their case.</li>
+                <li><strong>✓ Demonstrate Commitment:</strong> Show your team you care about their holistic well-being by providing support for significant life events.</li>
+            </ul>
+            <a href="#" class="btn">Request Custom Pricing</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-links">
+                <a href="#top">Home</a>
+                <a href="#solution">Features</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+            </div>
+            <p class="footer-disclaimer">
+                The information provided by ThreadLock is for informational purposes only and does not constitute legal advice. You should consult with a qualified legal professional for advice regarding your individual situation.
+            </p>
+            <p style="margin-top:20px;">© 2025 ThreadLock. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+</body>
+</html>
