--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       position: sticky; top: 0; z-index: 1000;
     }
-    .navbar-logo img { height: 40px; }
+    .navbar-logo img { height: 50px; }
     .navbar-links a { color: var(--dark-blue); text-decoration: none; margin-left: 25px; font-weight: 600; }
 
     /* Hero */
     .hero {
       background: linear-gradient(rgba(44,62,80,0.8), rgba(44,62,80,0.8)), 
-                  url('public/slide-1.jpg') center/cover;
+                  url('/slide-1.jpg') center/cover;
       color: var(--white); padding: 120px 0;
     }
     .hero h1 { color: var(--white); max-width: 800px; margin: auto; }
@@ -90,7 +90,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <a href="#" class="navbar-logo">
-      <img src="public/threadlock-logo.jpg" alt="ThreadLock Logo">
+      <img src="/threadlock-logo.png" alt="ThreadLock Logo">
     </a>
     <div class="navbar-links">
       <a href="#offer">Pricing</a>
